# internal/api/server/restapi/api/update_cube_sat_frame_parameters.go
@@ -1,0 +1,115 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package api
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+
+	models "github.com/Maksim646/space_vpx_satellite/internal/api/definition"
+)
+
+// NewUpdateCubeSatFrameParams creates a new UpdateCubeSatFrameParams object
+//
+// There are no default values defined in the spec.
+func NewUpdateCubeSatFrameParams() UpdateCubeSatFrameParams {
+
+	return UpdateCubeSatFrameParams{}
+}
+
+// UpdateCubeSatFrameParams contains all the bound params for the update cube sat frame operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters UpdateCubeSatFrame
+type UpdateCubeSatFrameParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*Create Cube Sat Frame Body
+	  Required: true
+	  In: body
+	*/
+	CreateCubeSatFrameBody *models.CreateCubeSatFrameBody
+	/*The ID of cube sat frame
+	  Required: true
+	  In: path
+	*/
+	ID int64
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewUpdateCubeSatFrameParams() beforehand.
+func (o *UpdateCubeSatFrameParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer r.Body.Close()
+		var body models.CreateCubeSatFrameBody
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if err == io.EOF {
+				res = append(res, errors.Required("createCubeSatFrameBody", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("createCubeSatFrameBody", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			ctx := validate.WithOperationRequest(r.Context())
+			if err := body.ContextValidate(ctx, route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.CreateCubeSatFrameBody = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("createCubeSatFrameBody", "body", ""))
+	}
+
+	rID, rhkID, _ := route.Params.GetOK("id")
+	if err := o.bindID(rID, rhkID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindID binds and validates parameter ID from path.
+func (o *UpdateCubeSatFrameParams) bindID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	value, err := swag.ConvertInt64(raw)
+	if err != nil {
+		return errors.InvalidType("id", "path", "int64", raw)
+	}
+	o.ID = value
+
+	return nil
+}
